deployment/deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: springboot-gradle
  labels:
    app: springboot-gradle
spec:
  selector:
    matchLabels:
      app: springboot-gradle
  replicas: 1
  template:
    metadata:
      name: springboot-gradle
      labels:
        app: springboot-gradle
    spec:
      imagePullSecrets:
      - name: dockerhub      
      containers:
        - name: springboot-gradle
          image: docker.io/hiondal/springboot-gradle:latest
          imagePullPolicy: Always
          ports:
            - name: port1
              containerPort: 8081
          resources:
            requests:
              cpu: 500m
              memory: 512Mi
            limits:
              cpu: 500m
              memory: 1024Mi

---

apiVersion: v1
kind: Service
metadata:
  name: springboot-gradle
spec:
  type: ClusterIP
  selector:
    app: springboot-gradle
  ports:
    - name: springboot-gradle
      port: 8080
      targetPort: 8080

---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: springboot-gradle
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  ingressClassName: nginx
  rules:
    - host: gappa.springboot-gradle.43.200.12.214.nip.io
      http:
        paths:
          - path: /(.*)
            pathType: Prefix
            backend:
              service:
                name: springboot-gradle
                port: 
                  number: 8080
